Upgrade 3rd party dependencies